kube/hydra/admin-ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: oidc-react-admin
  namespace: accounts-ecosystem
  annotations:
    kubernetes.io/ingress.class: internal
    yggdrasil.uswitch.com/healthcheck-path: /health/alive
    yggdrasil.uswitch.com/timeout: 30s
spec:
  rules:
    - host: oidc-react-staging.internal.rvu.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: oidc-react
              servicePort: 4445
