kube/hydra/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: oidc-react
  namespace: accounts-ecosystem
  annotations:
    kubernetes.io/ingress.class: external
    ingress.kubernetes.io/rewrite-target: /
    yggdrasil.uswitch.com/healthcheck-path: /health/alive
    yggdrasil.uswitch.com/timeout: 30s
spec:
  rules:
    - host: oidc-react-staging.external.rvu.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: oidc-react
              servicePort: 4444
